--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="item">
         <h1>Dashboard 2: Aircraft Incidents </h1>
         <p><strong>Author:</strong> Zach Gendreau</p>
-        <p><strong>Documentation:</strong> <a href="YOUR LINK HERE" target="_blank">Edit link in "index.html" on line 13. Give your document "Viewer" access to UW in share settings.</a></p>
+        <p><strong>Documentation:</strong> <a href="https://docs.google.com/document/d/1d1CcFQaKEtoySFqfoprsxS_M8T14hVwdPyLy3RCn7f8/edit?tab=t.0" target="_blank"> Link</a></p>
     </div>
     
     <!-- INTERACTIVE WIDGETS -->
