--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Challenge 3</title>
     <script src="https://d3js.org/d3.v7.min.js"></script> <!-- Load D3 library -->
+    <script src="https://unpkg.com/simple-statistics"></script>
     <link rel="stylesheet" href="style.css"> <!-- Connect to style.css for styles -->
 </head>
 <body class="vertical-container">
@@ -12,33 +13,28 @@
     <div class="item">
         <h1>Dashboard 2: Aircraft Incidents </h1>
         <p><strong>Author:</strong> Zach Gendreau</p>
-        <p><strong>Documentation:</strong> <a href="https://docs.google.com/document/d/1d1CcFQaKEtoySFqfoprsxS_M8T14hVwdPyLy3RCn7f8/edit?tab=t.0" target="_blank"> Link</a></p>
+        <p><strong>Documentation:</strong> <a href="https://docs.google.com/document/d/1Mj1svy7nhMQCMMFAbgGDOMJrZNBn_ppsafZ2Kf7fNmo/edit?usp=sharing" target="_blank"> Link</a></p>
     </div>
     
     <!-- INTERACTIVE WIDGETS -->
     <div class="item horizontal-container">
-        <div class="item"><!-- Your widget 1 code goes here. -->
+        <div class="item"><!-- Your widget 1 code goes here. >
             <!-- Widget 1 title -->
             <!-- Widget 1 element -->
         </div>
-
-        <!-- DELETE THE FOLLOWING DIV IF YOU ONLY HAVE 1 WIDGET. -->
-        <div class="item"><!-- Your widget 2 code goes here. -->
-            <!-- Widget 2 title -->
-            <!-- Widget 2 element -->
-        </div>
+        
     </div>
 
     <!-- CHART(S) -->
     <div class="item chart-container">
-        <h2>[Chart 1 Title]</h2>
+        <h2>Trends in Total Fatal Injuries Over Time</h2>
         <svg id="lineChart1" width="900" height="400"></svg> <!-- If you change this ID name, you must change it in main.js too -->
     </div>
     <!-- DELETE THE FOLLOWING DIV IF YOU ONLY HAVE 1 CHART. -->
-    <div class="item chart-container">
+    <!-- <div class="item chart-container">
         <h2>[Chart 2 Title]</h2>
         <svg id="lineChart2" width="900" height="400"></svg>
-    </div>
+    </div> -->
     <script src="main.js"></script>
 </body>
 </html>
