--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- INTERACTIVE WIDGETS -->
     <div class="item horizontal-container">
         <div class="item">
-            <label for="accidentFilter">Filter by Accident Type:</label>
+            <label for="accidentFilter">Filter by Aircraft Type:</label>
             <div id="accidentFilter"></div>
         </div>
     </div>
